--- a/exp9/views/list.ejs
+++ b/exp9/views/list.ejs
@@ -13,6 +13,7 @@
                                 <th>Age</th>
                                 <th>City</th>
                                 <th>Delete</th>
+                                <th>Edit</th>
                             </tr>
                             <% result.forEach((x)=>{ %>
                                 <tr>
@@ -20,6 +21,7 @@
                                     <td><%= x.age %></td>
                                     <td><%= x.city %></td>
                                     <td><a href="/delete/<%= x._id %>" class="btn btn-danger btn-sm">Delete</a></td>
+                                    <td><a href="/edit/<%= x._id %>" class="btn btn-sm btn-info">Edit</a></td>
                                 </tr>
                             <% }) %>
                         </table>
