--- a/exp_pro/views/includes/header.ejs
+++ b/exp_pro/views/includes/header.ejs
@@ -64,6 +64,9 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="/student">STUDENT <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="/student/list">STUDENT LIST <span class="sr-only">(current)</span></a>
+                    </li>
                     
                     
                     <!-- <li class="nav-item dropdown">
