--- a/exp10/views/pro_view.ejs
+++ b/exp10/views/pro_view.ejs
@@ -13,13 +13,21 @@
                 <th>S.No.</th>
                 <th>Title</th>
                 <th>Price</th>
+                <th>Detail</th>
+                <th>Delete</th>
+                <th>Edit</th>
             </tr>
             <% result.forEach((x, n)=>{ %>
+                
                 <tr>
                     <td><%= n+1 %></td>
                     <td><%= x.title %></td>
                     <td><%= x.price %></td>
+                    <td><a href="/product/detail/<%= x._id %>">Detail</a></td>
+                    <td><a href="/product/delete/<%= x._id %>">Delete</a></td>
+                    <td><a href="/product/edit/<%= x._id %>">Edit</a></td>
                 </tr>
+               
             <% }) %>
         </table>
     </body>
