--- a/exp_pro/views/student/index.ejs
+++ b/exp_pro/views/student/index.ejs
@@ -16,10 +16,9 @@
                 <label for="">City</label>
                 <select class="form-control" name="city">
                     <option>Select</option>
-                    <option>Indore</option>
-                    <option>Bhopal</option>
-                    <option>Mumbai</option>
-                    <option>Pune</option>
+                    <% result.forEach((x)=>{ %>
+                        <option><%= x.name %></option>
+                    <% }) %>
                 </select>
             </div>
             <br />
