--- a/exp_pro/views/includes/header.ejs
+++ b/exp_pro/views/includes/header.ejs
@@ -67,6 +67,12 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="/student/list">STUDENT LIST <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="/subject">SUBJECT <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="/subject/list">SUBJECT LIST <span class="sr-only">(current)</span></a>
+                    </li>
                     
                     
                     <!-- <li class="nav-item dropdown">
