--- a/exp_pro/views/student/edit.ejs
+++ b/exp_pro/views/student/edit.ejs
@@ -13,6 +13,17 @@
                 <input value="<%= data.age %>" autocomplete="off" type="text" name="age" class="form-control" />
             </div>
             <div class="form-group">
+                <label>Subject</label>
+                <select class="form-control" name="subject">
+                    <option>Select</option>
+                    <% result2.forEach((x)=>{ %>
+                        <option <% if(data.subject == x.name ){ %> selected <% } %> ><%= x.name %></option>
+                    <% }) %>
+                </select>
+            </div>
+
+
+            <div class="form-group">
                 <label for="">City</label>
                 <select class="form-control" name="city">
                     <option>Select</option>
